--- a/cek-data.ipynb
+++ b/cek-data.ipynb
@@ -770,6 +770,16 @@
     "rk = pd.read_csv('ruangan-kampus.csv', sep=';', engine='python', dtype=str, on_bad_lines='warn')\n",
     "rk\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1a6277a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession"
+   ]
   }
  ],
  "metadata": {
